# autoclip

./: .dockerignore  .env  .env.backup  .gitignore  .taurignore  BUILD_GUIDE.md  BUILD_SUMMARY.md  CHANGELOG.md  CONTACT_UPDATE.md  CONTRIBUTING.md  DESKTOP_ARCHITECTURE_FIX.md  DOCKER.md  Dockerfile  Dockerfile.dev  HANDOFF.md  INTERNATIONALIZATION.md  LICENSE  PROJECT_SUMMARY.md  README-EN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  STARTUP_GUIDE.md  autoclip.db  autoclips.db  celery_results.db  check_whisper_status.sh  clean_database.py  docker-compose.dev.yml  docker-compose.yml  docker-dev-entrypoint.sh  docker-entrypoint.sh  docker-start.sh  docker-status.sh  docker-stop.sh  dump.rdb  fix_imports.py  init_database.py  install_llm_dependencies.py  (+13 more)
.github/: README-EN.md  README.md
.trae/: TODO.md
backend/: CONFIG_MANAGER_OPTIMIZATION_SUMMARY.md  app_factory.py  autoclip.db  backend_requirements.txt  celery_app.py  debug_imports.py  debug_time.py  demo_celery.py  demo_celery_advanced.py  demo_websocket.py  desktop_celery.py  desktop_main.py  dump.rdb  execute_real_pipeline.py  init_db.py  main.py  main_simple.py  pytest.ini  requirements.txt  start_server.py  system_health_report.json  test.srt  test_celery.py  test_frontend_integration.py  test_notification_throttling.py  test_websocket_client.py
data/: autoclip.db  settings.json
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_manager.rs  commands.rs  lib.rs  main.rs  tray.rs
(+677 files in other folders)
